--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE' apply false
-	id 'io.spring.gradle-enterprise-conventions' version '0.0.2'
+//	id 'io.spring.gradle-enterprise-conventions' version '0.0.2'
 	id 'io.spring.nohttp' version '0.0.5.RELEASE'
 	id 'org.jetbrains.kotlin.jvm' version '1.3.72' apply false
 	id 'org.jetbrains.dokka' version '0.10.1' apply false
@@ -317,6 +317,7 @@ configure([rootProject] + javaProjects) { project ->
 	}
 
 	test {
+		enabled(false)
 		useJUnitPlatform()
 		include(["**/*Tests.class", "**/*Test.class"])
 		systemProperty("java.awt.headless", "true")
