--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,11 @@
 pluginManagement {
 	repositories {
 		gradlePluginPortal()
-		maven { url 'https://repo.spring.io/plugins-release' }
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+		maven{ url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'}
+		maven { url "https://repo.spring.io/plugins-release" }
+		mavenCentral()
+		maven { url "https://repo.spring.io/libs-spring-framework-build" }
 	}
 }
 apply from: "$rootDir/gradle/build-cache-settings.gradle"
